--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 dash==2.14.2
-pandas==2.1.4
-numpy==1.26.2
-scikit-learn==1.3.2
-tensorflow==2.15.0
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.0
+tensorflow==2.13.0
 plotly==5.18.0
-pytest==7.4.3
-black==23.11.0
+pytest==7.4.0
+black==23.7.0
 flake8==6.1.0
 python-dotenv==1.0.0
 requests==2.31.0
-gunicorn==21.2.0 
+gunicorn==21.2.0
+matplotlib==3.7.2
+seaborn==0.12.2 
